# syllabify-fr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTES-v6.md  README.md  codecov.yml  deny.toml
.claude/skills/: build-wasm.md  diagnose-divergence.md  verify-conformance.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deps-canary.yml  publish-npm.yml  release.yml
benches/: syllabify.rs
examples/: basic.rs
ffi/: Cargo.toml  README.md  cbindgen.toml
ffi/include/: syllabify_fr.h
ffi/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: phonemes.rs  render_html.rs  syllabify_text.rs  syllables.rs
jni/: Cargo.toml  README.md
jni/java/com/dyscolor/syllabify/: SyllabifyFr.java
jni/src/: lib.rs
py/: Cargo.toml  README.md  pyproject.toml
py/src/: lib.rs
py/tests/: test_syllabify.py
src/: cleaner.rs  data.rs  decoder.rs  homographs.rs  html.rs  letters.rs  liaisons.rs  lib.rs  parser.rs  phoneme.rs  rules.rs
swift/: .gitignore  Package.swift  README.md
swift/Sources/SyllabifyFr/: SyllabifyFr.swift
swift/Tests/SyllabifyFrTests/: SyllabifyFrTests.swift
swift/scripts/: build-xcframework.sh
tests/: cli.rs  edge_cases.rs  oracle.json  properties.rs  regression.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
wasm/tests/: smoke.rs
