[package]
name = "syllabify-fr-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "C FFI bindings for syllabify-fr — French syllabification library"
readme = "README.md"
keywords = ["french", "syllables", "ffi", "c", "dyslexia"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "syllabify_fr_ffi"
path = "src/lib.rs"

[dependencies]
syllabify-fr = { path = ".." }
