[package]
name = "syllabify-fr-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for syllabify-fr — French syllabification library"
keywords = ["french", "syllables", "python", "pyo3", "dyslexia"]

[lib]
name = "syllabify_fr"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
syllabify-fr = { path = ".." }
pyo3 = { version = "0.23" }
