[package]
name = "syllabify-fr-wasm"
version = "0.2.0"
edition = "2021"
description = "WebAssembly bindings for syllabify-fr (French syllabification, LireCouleur 6 port)"
license = "GPL-3.0-or-later"
repository = "https://github.com/dyscolor/syllabify-fr"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
syllabify-fr = { path = "..", default-features = false, features = ["regex-lite"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
