[package]
name = "syllabify-fr-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly bindings for syllabify-fr (French syllabification, LireCouleur 6 port)"
readme = "README.md"
keywords = ["french", "syllables", "wasm", "webassembly", "dyslexia"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
syllabify-fr = { path = "..", default-features = false, features = ["regex-lite"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
